took out <br> tag from article

--- a/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
+++ b/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
@@ -46,16 +46,15 @@ from a staff member. The Director of LSAP is John Mundell, P.E., L.P.G. located 
 
 **Step #1: Sign-up.** A commitment group (one of the above) contacts LSAP and signs up. It’s free and easy!
 
-<br />
 **Step #2: Write a Short Reflection.** The commitment group writes a short reflection
 that commits to the LSAP. If you have a mission statement, that may help generate
 thoughts for your reflection.
-<br />
+
 **Step #3: Write an Action Plan.** Talking with others in the commitment group, an
 Action Plan is created that announces your intention to follow the seven platform
 goals of Pope Francis. The Plan can be simple or more complex depending upon the
 wishes of the commitment group. It simply needs to be something that is doable.
-<br />
+
 **Step #4: Implementation.** The last step is implementing the Action Plan, and at
 the end of each year, telling the LSAP how the commitment went from this year, and
 then plan for the next platform goal the following year.
@@ -70,22 +69,21 @@ The **seven platform goals** are:
 - Develop Ecological Spirituality
 - Community Engagement and Participatory Action.
 
-## **What Can You Do?**
+## What Can You Do?
 
 **Pray for Achieving Your Action** - Each commitment group should think of reasonable ways they may address
 “each year” one of the Laudato Si’ goals. Then the next year, another goal. Slow but sure, improvements will be
 forthcoming.
 
-<br />
 **Complete Actions that are Meaningful** - In your efforts in registering, complete
 things that your commitment group feels are meaningful and will have a positive impact
 and give a good start in promoting and involving others in registering too.
-<br />
+
 **Convey your Commitment Group’s Involvement in LSAP** - It is important that you
 motivate others by your example and gain momentum for more people to implement improvements
 to help our planet earth. As we all get more people involved, more helpful actions
 will occur that make our planet a better place.
-<br />
+
 **Talk to Leaders in Government and Other Commitment Groups** - Through word of mouth,
 tell others what you are doing, and tell them they can register too. With them on
 board, even more improvements will happen. Registration is open to all children of
